[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediatheque-numerique-letterboxd"
version = "2.1.0"
description = "Exporte les films présents sur le site de la Médiathèque numérique et les importe dans une liste Letterboxd"
authors = [{ name = "cchenu" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "certifi>=2025.4.26",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.2",
    "h11>=0.16.0",
    "idna>=3.10",
    "numpy>=2.3.0",
    "outcome>=1.3.0.post0",
    "pandas>=2.3.0",
    "pycparser>=2.22",
    "pysocks>=1.7.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "selenium>=4.34.0",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "sortedcontainers>=2.4.0",
    "trio>=0.30.0",
    "trio-websocket>=0.12.2",
    "typing-extensions>=4.14.1",
    "tzdata>=2025.2",
    "urllib3[socks]>=2.4.0",
    "websocket-client>=1.8.0",
    "wsproto>=1.2.0"
]

[project.urls]
homepage = "https://github.com/cchenu/mediatheque-numerique-letterboxd"
documentation = "https://github.com/cchenu/mediatheque-numerique-letterboxd"
repository = "https://github.com/cchenu/mediatheque-numerique-letterboxd"

[tool.ruff]
line-length = 79
target-version = "py312"
fix = false
extend-exclude = ["venv"]

[tool.ruff.lint]
unfixable = []
select = [
  "ALL"
]

ignore = [
  "PLR0904", # too-many-public-methods
  "PLR0913", # Too many arguments to function call
  "PLR0911", # Too many returns
  "PLR0912", # Too many branches
  "PLR0914", # Too many locals
  "PLR0915", # Too many statements
  "D203", # incorrect-blank-line-before-class
  "D212", # multi-line-summary-first-line 
  "COM812", # missing-trailing-coma
  "FBT001", # boolean-type-hint-positional-argument
  "FBT002", # boolean-default-value-positional-argument
  "C901", # complex-structure
  "CPY001", # missing-copyright-notice
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101", # assert
  "PLR2004", # magic-value-comparison
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["EC"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "preserve"

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = false
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
pretty = true
disallow_any_unimported = true
# disallow_any_expr = true
disallow_any_decorated = true
# disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
exclude = "^venv/"

[tool.isort]
profile = "black"
